--- a/src/components/GetElementOfSequence/style.css
+++ b/src/components/GetElementOfSequence/style.css
@@ -3,10 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: black;
-  color: white;
+  background-color: inherit;
   align-items: center;
-  font-size: large;
 }
 .flat-button {
   background-color: inherit;
@@ -18,6 +16,6 @@
 .number-input {
   background-color: inherit;
   color: inherit;
-  border-left: 2px solid white;
-  margin: 1em;
+  border: 2px solid white;
+  margin-left: 1em;
 }
